--- a/Bridge/MainWindow.xaml
+++ b/Bridge/MainWindow.xaml
@@ -10,7 +10,7 @@
         <DataTemplate x:Key="friendsTemplate">
             <StackPanel Margin="5">
                 <Image Height="60" Width="60" Source="{Binding Path=pict, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock HorizontalAlignment="Center" TextAlignment="Left" Text="{Binding Path=name}" FontSize="16"/>
+                <TextBlock HorizontalAlignment="Center" TextAlignment="Left" Text="{Binding Path=name, UpdateSourceTrigger=PropertyChanged}" FontSize="16"/>
             </StackPanel>
         </DataTemplate>
         <ItemsPanelTemplate x:Key="friendsItemsTemplate">
@@ -48,7 +48,7 @@
                                 <StackPanel Name="spChats" Margin="5" Orientation="Horizontal" Width="222">
                                     <Image Width="30" Height="30" Source="{Binding Path=image, UpdateSourceTrigger=PropertyChanged}"/>
                                     <StackPanel Margin="20,0,0,0">
-                                        <TextBlock TextAlignment="Left" FontSize="16" Text="{Binding Path=name}"/>
+                                        <TextBlock TextAlignment="Left" FontSize="16" Text="{Binding Path=name, UpdateSourceTrigger=PropertyChanged}"/>
                                         <TextBlock TextAlignment="Left" Foreground="Gray" FontSize="12" FontStyle="Italic" Text="{Binding Path=id}"/>
                                     </StackPanel>
                                 </StackPanel>
@@ -63,7 +63,7 @@
                                 <StackPanel Orientation="Horizontal">
                                     <Image Name="msgiconn" VerticalAlignment="Top" Width="30" Height="30" Source="{Binding Path=pict, UpdateSourceTrigger=PropertyChanged}"/>
                                     <StackPanel Name="panelmsg"  MinWidth="400" MinHeight="35" Background="#FFBFA966" Margin="0,0,0,0">
-                                        <TextBlock Name="pmsg1" TextAlignment="Left" FontStyle="Italic" FontSize="10" Text="{Binding Path=namefrom}"></TextBlock>
+                                        <TextBlock Name="pmsg1" TextAlignment="Left" FontStyle="Italic" FontSize="10" Text="{Binding Path=name, UpdateSourceTrigger=PropertyChanged}"></TextBlock>
                                         <TextBlock Height="auto" MaxWidth="400" TextWrapping="Wrap" Name="pmsg2" TextAlignment="Left" FontSize="16" Text="{Binding Path=textmsg}"></TextBlock>
                                     </StackPanel>
                                 </StackPanel>
@@ -90,7 +90,7 @@
                                 <StackPanel Orientation="Horizontal">
                                     <Image Width="30" Height="30" Source="{Binding Path=pict, UpdateSourceTrigger=PropertyChanged}"/>
                                     <StackPanel Margin="10,0,0,0">
-                                        <TextBlock Background="#FFE5E5E5" FontSize="16" Text="{Binding Path=name}"/>
+                                        <TextBlock Background="#FFE5E5E5" FontSize="16" Text="{Binding Path=name, UpdateSourceTrigger=PropertyChanged}"/>
                                         <TextBlock Background="#FFE5E5E5" FontSize="12" FontStyle="Italic" Text="{Binding Path=id}"/>
                                     </StackPanel>
                                 </StackPanel>
